fine spacing fixed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,6 +21,7 @@
   display: flex;
   overflow-x: scroll;
   width: 100%;
+  padding-left: 8px;
   min-height: 33px;
 }
 
